kube/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 1337
  selector:
    app: url-shortener
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-dp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: url-shortener
          image: larryschirmer/url-short:1.0.0
          ports:
            - containerPort: 1337
