kube/test-dp.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: test-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-dp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-pod
  template:
    metadata:
      labels:
        app: test-pod
    spec:
      containers:
      - name: test-pod
        image: nginxdemos/hello
        ports:
        - containerPort: 80
